Standardized and refactored and simplified HTTP api contracts (#612)